fix(Spacing): better header spacing on mobile

--- a/src/css/ginetta-tonic-festival.webflow.css
+++ b/src/css/ginetta-tonic-festival.webflow.css
@@ -1300,12 +1300,11 @@ body {
   }
 
   .main-title {
+    display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 144px;
-    margin-bottom: 200px;
+    margin: 144px 0 72px;
     padding-right: 0;
-    display: flex;
   }
 
   .short-info.header {
